lets get this done

--- a/Public/index.html
+++ b/Public/index.html
@@ -62,7 +62,7 @@
         <div>
             <h1>Note Scraper</h1>
             <a href="/scrape" id="btn-scrape">1. Scrape</a>
-            <a href="/articles" id="btn-articles">2. Articles</a>
+            <a href="/article" id="btn-articles">2. Articles</a>
         </div>
         <div id="articles"></div>
 
